--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@chakra-ui/icon": "^3.2.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@types/react-table": "^7.7.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
