--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@types/react-table": "^7.7.20",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-table": "^7.8.0"
