--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@chakra-ui/icon": "^3.2.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@types/react-slick": "^0.23.13",
     "@types/react-table": "^7.7.20",
     "axios": "^1.7.2",
+    "framer-motion": "^11.3.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "react-table": "^7.8.0"
+    "react-slick": "^0.30.2",
+    "react-table": "^7.8.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
